# mljboard-bot

./: .gitignore  Cargo.toml  README.md  Secrets.toml.example  schema.sql
.github/workflows/: freebsd.yml
src/: lib.rs  main.rs
src/db/: mongo.rs  postgres.rs
src/discord/: bot.rs  lastfm.rs  macros.rs  mod.rs  ops.rs  setups.rs
src/hos/: json.rs  mod.rs
src/lfm/: mod.rs
