[package]
name = "mljboard-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = "4.4.8"
mongodb = "2.7.1"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.34.0", features = ["rt", "time", "macros"] }
bson = "2.7.0"
rand = "0.8.5"
prefixed-api-key = { version = "0.1.0", features = ["sha2"] }
reqwest = "0.11.22"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
env_logger = "0.10.1"
futures = "0.3.29"
mljcl = { git = "https://github.com/duckfromdiscord/mljcl", version = "0.4.1" }
lastfm = "0.6.1"
